pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: myapp
spec:
  containers:
  - name: mycontainer
    image: nginx
