probes.yaml

apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: nginx
    image: nginx:latest
    livenessProbe:   
      httpGet:
        path: /
        port: 80
    readinessProbe:  
      httpGet:
        path: /
        port: 80
